fix layout scrollbar horizontal

--- a/styles/component-11.css
+++ b/styles/component-11.css
@@ -1,6 +1,6 @@
 .section-salima {
   display: grid;
-  grid-template-columns: 39rem 38.568rem 38.568rem 38.455rem 38.455rem;
+  grid-template-columns: 37.9rem 37.9rem 37.9rem 37.9rem 37.9rem;
   justify-content: center;
 }
 
