--- a/styles/component-12.css
+++ b/styles/component-12.css
@@ -81,6 +81,6 @@
 
 .commet-bg {
   position: absolute;
-  right: -0.7%;
-  bottom: 6.8%;
+  right: 0;
+  bottom: 13.2%;
 }
